<resources>
    <string name="app_name">Weather Project</string>
    <string name="current_conditions">CURRENT CONDITIONS</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="degree">&#xb0;</string>
    <string name="precipitation_short_text">PRECIP</string>
    <string name="humidity_short_text">HUMD</string>
    <string name="wind_text">WIND</string>
    <string name="weather_map">WEATHER MAP</string>
    <string name="hourly_conditions">HOURLY CONDITIONS</string>
    <string name="daily_conditions">DAILY CONDITIONS</string>
    <string name="search_title">Search</string>
    <string name="my_location_title">My Location</string>
    <string name="settings_title">Settings</string>
    <string name="units_title">Units</string>
    <string name="theme_title">Theme</string>
    <string name="about_title">About</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="weather_alert_title">Severe Weather Alerts</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="sent_by">SENT BY:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="warning_icon_description">Warning icon</string>
    <string name="search_hint">Search by city or zip code</string>
    <string name="favorites_title">Favorites</string>
    <string name="recent_title">Recent</string>
    <string name="daily_weather_icon_description">Daily weather icon</string>
    <string name="hourly_weather_icon_description">Hourly weather icon</string>
    <string name="precipitation_icon_description">Precipitation icon</string>
    <string name="today_daily_weather">TODAY</string>
    <string name="today_hourly_weather">TDY</string>
    <string name="back_arrow_description">Back arrow</string>
    <string name="weather_project_splash_description">Weather Project Splash</string>
    <string name="api_used_title">APIs Used</string>
    <string name="open_weather">OpenWeather</string>
    <string name="google_maps_platform">Google Maps Platform</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="material_components">Material Components</string>
    <string name="retrofit">Retrofit</string>
    <string name="glide">Glide</string>
    <string name="mpandroid_chart">MPAndroid Chart</string>
    <string name="json_data_used">JSON Data Used</string>
    <string name="us_states_and_cities">ahmu83/US_States_and_Cities.json</string>
    <string name="all_countries_and_cities">russ666/all-countries-and-cities-json</string>
</resources>