<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/myLocation"
        android:icon="@drawable/ic_my_location"
        android:title="@string/my_location_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about_title"
        android:visible="false"
        app:showAsAction="always" />
</menu>